--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
         </div>
       </div>
     </div>
+    <div class="miaosha">
+      <div class="wp">
+        <div class="col_l">
+          <img src="http://www.superslide2.com/demo/images/pic1.jpg" />
+        </div>
+        <div class="col_c"></div>
+        <div class="col_r"></div>
+      </div>
+    </div>
   </body>
   <script>
     jQuery(".slideBox").slide({
